Fix date handling and layout issues.

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -140,7 +140,6 @@ html, body {
 }
 
 .one-entity-admin .loading-spinner {
-  display: inline-block;
   width: 100%;
   text-align: center;
   position: absolute;
